--- a/templates/index.html
+++ b/templates/index.html
@@ -23,35 +23,6 @@
         <a href="{{ url_for('display_rdf_data') }}" class="relative inline-block hover:before:w-full before:block before:bg-black dark:before:bg-[#d1d5db] before:absolute before:inset-x-0 before:left-0 before:bottom-[-2px] before:w-0 before:h-[1px] before:transition-width before:duration-300">Explore</a>
       </div>
 
-      <!-- <div class="transition duration-500 ease-in-out hidden sm:block">
-        <div class="flex justify-center items-center">
-          <input onclick="darkMode()" type="checkbox" id="darkModeToggle" class="sr-only">
-          <label for="darkModeToggle" class="cursor-pointer">
-              <div class="relative">
-                  <div class="block bg-[#d1d5db] dark:bg-[#373739] w-14 h-8 rounded-full"></div>
-                  <div class="dot absolute right-1 top-1 bg-white w-6 h-6 rounded-full transition-transform duration-500 transform z-20"></div>
-                  <svg xmlns="http://www.w3.org/2000/svg" id="svg1" class="text-black dark:text-white absolute transition-opacity duration-100 ease-in-out scale-75 left-1 top-1 z-10 icon icon-tabler icon-tabler-sun-filled" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                    <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                    <path d="M12 19a1 1 0 0 1 .993 .883l.007 .117v1a1 1 0 0 1 -1.993 .117l-.007 -.117v-1a1 1 0 0 1 1 -1z" stroke-width="0" fill="currentColor"></path>
-                    <path d="M18.313 16.91l.094 .083l.7 .7a1 1 0 0 1 -1.32 1.497l-.094 -.083l-.7 -.7a1 1 0 0 1 1.218 -1.567l.102 .07z" stroke-width="0" fill="currentColor"></path>
-                    <path d="M7.007 16.993a1 1 0 0 1 .083 1.32l-.083 .094l-.7 .7a1 1 0 0 1 -1.497 -1.32l.083 -.094l.7 -.7a1 1 0 0 1 1.414 0z" stroke-width="0" fill="currentColor"></path>
-                    <path d="M4 11a1 1 0 0 1 .117 1.993l-.117 .007h-1a1 1 0 0 1 -.117 -1.993l.117 -.007h1z" stroke-width="0" fill="currentColor"></path>
-                    <path d="M21 11a1 1 0 0 1 .117 1.993l-.117 .007h-1a1 1 0 0 1 -.117 -1.993l.117 -.007h1z" stroke-width="0" fill="currentColor"></path>
-                    <path d="M6.213 4.81l.094 .083l.7 .7a1 1 0 0 1 -1.32 1.497l-.094 -.083l-.7 -.7a1 1 0 0 1 1.217 -1.567l.102 .07z" stroke-width="0" fill="currentColor"></path>
-                    <path d="M19.107 4.893a1 1 0 0 1 .083 1.32l-.083 .094l-.7 .7a1 1 0 0 1 -1.497 -1.32l.083 -.094l.7 -.7a1 1 0 0 1 1.414 0z" stroke-width="0" fill="currentColor"></path>
-                    <path d="M12 2a1 1 0 0 1 .993 .883l.007 .117v1a1 1 0 0 1 -1.993 .117l-.007 -.117v-1a1 1 0 0 1 1 -1z" stroke-width="0" fill="currentColor"></path>
-                    <path d="M12 7a5 5 0 1 1 -4.995 5.217l-.005 -.217l.005 -.217a5 5 0 0 1 4.995 -4.783z" stroke-width="0" fill="currentColor"></path>
-                  </svg>
-
-                  <svg xmlns="http://www.w3.org/2000/svg" id="svg2" class="text-black dark:text-white absolute transition-opacity duration-100 ease-in-out scale-75 right-1 top-1 z-10 icon icon-tabler icon-tabler-sun-off" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                  <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                  <path d="M3 3l18 18"></path>
-                  <path d="M16 12a4 4 0 0 0 -4 -4m-2.834 1.177a4 4 0 0 0 5.66 5.654"></path>
-                  <path d="M3 12h1m8 -9v1m8 8h1m-9 8v1m-6.4 -15.4l.7 .7m12.1 -.7l-.7 .7m0 11.4l.7 .7m-12.1 -.7l-.7 .7"></path>
-                  </svg>
-              </div>
-          </label>
-      </div> -->
     </div>
 
     </nav>
@@ -59,8 +30,8 @@
 
     <!-- CONTENT START -->
     <main class="h-screen flex items-center justify-center relative">
-      <div class="flex flex-col gap-16 justify-center items-center h-screen text-center">
-        <h1 class="text-5xl font-light w-[80vw] sm:w-[500px] gradient-text-dark unselectable" id="headerText">Stop wasting your time. <br> Find the best movie to watch here.</h1>
+      <div class="flex flex-col gap-8 md:gap-16 justify-center items-center h-screen text-center">
+        <h1 class="text-3xl md:text-5xl font-light w-[80vw] sm:w-[500px] gradient-text-dark unselectable" id="headerText">Stop wasting your time. <br> Find the best movie to watch here.</h1>
         
         <div class="relative">
             <div
