--- a/templates/home.html
+++ b/templates/home.html
@@ -21,8 +21,9 @@
         <div class="flex flex-col">
             <!-- movie First-->
             {% if data.movies_all %}
-            <a href="{{ url_for('movie_detail', moviename=data.movies_all[0].moviename) }}">
+            <a href="{{ url_for('movie_detail', moviename=data.movies_all[0].moviename) }}" class="hidden md:block">
                 <div class="w-[100vw] h-[65vh] relative">
+                    <video class="absolute top-0 -z-50 w-[100vw] brightness-75" data-uia="our-story-card-video" autoplay="" playsinline="" muted="" loop=""><source src="{{ url_for('static', filename='img/GodzillaVSKongTrailer.mp4') }}" type="video/mp4"></video> 
                     <div class="absolute left-8 -bottom-32 z-20 flex items-end justify-between gap-8">
                         <img src="{{ data.movies_all[0].image_url }}" class="w-56 shadow-md shadow-semiBlack" alt="">
 
@@ -47,14 +48,14 @@
             {% endif %} 
             <!-- movie first -->
 
-            <div class="w-[100vw] h-[150px] half-gradient pl-[310px] rounded-custom"></div>
+            <div class="w-[100vw] h-[70px] md:h-[150px] half-gradient pl-[310px] rounded-custom"></div>
 
             <div class="w-[100vw] flex flex-col pt-4 pl-9 gap-12">
 
                 <!-- POPULAR MOVIES START -->
                 <p class="text-4xl text-white font-semibold">Popular Movies</p>
                 <div class="w-full relative">
-                    <div class="flex overflow-x-scroll pb-10 hide-scroll-bar">
+                    <div class="flex overflow-x-scroll pb-10 hide-scroll-bar lg:ml-4 md:ml-4 ml-0">
                         <button
                             class="scroll-button left bg-mainColor bg-opacity-60 h-full flex items-center justify-center"
                             id="scrollLeft">
@@ -66,12 +67,12 @@
                             <i class="text-white text-2xl fa-solid fa-chevron-right"></i>
                         </button>
                         {% for movie in data.movies_all %}
-                        <div class="flex flex-nowrap lg:ml-10 md:ml-10 ml-0">
+                        <div class="flex flex-nowrap">
                             <div class="inline-block px-3">
                                 
                                 <a href="{{ url_for('movie_detail', moviename=movie.moviename) }}">
                                     <div
-                                        class="w-64 h-[370px] max-w-xs overflow-hidden rounded-lg shadow-md bg-white hover:shadow-xl transition-shadow duration-300 ease-in-out">
+                                        class="w-64 h-[370px] max-w-xs overflow-hidden rounded-lg shadow-md flex items-center bg-black hover:shadow-xl transition-shadow duration-300 ease-in-out">
                                         <img src="{{ movie.image_url }}" alt="" width="100%">
                                     </div>
                                 </a>
@@ -81,13 +82,14 @@
                     </div>
                 </div>
                 <!-- POPULAR MOVIES END -->
+
                 <!-- GENRE START -->
                 <div class="flex flex-col items-center gap-10">
                     <p class="text-4xl text-white font-semibold">Genre</p>
                     <div class="flex flex-wrap gap-4 items-center justify-center w-[80%]">
                         {% for genre in data.genres %}
                         <a href="{{ url_for('filter',type='genre',desc=genre) }}"
-                            class="py-3 px-5 text-xl bg-mainColor text-white font-semibold border-2 border-white rounded-full hover:bg-white hover:text-mainColor transition-colors duration-300 ease-in-out cursor-pointer">{{
+                            class="py-1 md:py-3 px-2 md:px-5 text-lg md:text-xl bg-mainColor text-white font-semibold border-2 border-white rounded-full hover:bg-white hover:text-mainColor transition-colors duration-300 ease-in-out cursor-pointer">{{
                             genre }}</a>
                         {% endfor %}
                     </div>
@@ -97,7 +99,7 @@
                 <!-- ACTION MOVIES START -->
                 <p class="text-4xl text-white font-semibold">Action Movies</p>
                 <div class="w-full relative">
-                    <div class="flex overflow-x-scroll2 pb-10 hide-scroll-bar">
+                    <div class="flex overflow-x-scroll2 pb-10 hide-scroll-bar lg:ml-4 md:ml-4 ml-0">
                         <button
                             class="scroll-button left bg-mainColor bg-opacity-60 h-full flex items-center justify-center"
                             id="scrollLeft2">
@@ -109,11 +111,11 @@
                             <i class="text-white text-2xl fa-solid fa-chevron-right"></i>
                         </button>
                         {% for movie in data.movies_action %}
-                        <div class="flex flex-nowrap lg:ml-10 md:ml-10 ml-0">
+                        <div class="flex flex-nowrap">
                             <div class="inline-block px-3">
                                 <a href="{{ url_for('movie_detail', moviename=movie.moviename) }}">
                                     <div
-                                        class="w-64 h-[370px] max-w-xs overflow-hidden rounded-lg shadow-md bg-white hover:shadow-xl transition-shadow duration-300 ease-in-out">
+                                        class="w-64 h-[370px] max-w-xs overflow-hidden rounded-lg shadow-md bg-black flex items-center hover:shadow-xl transition-shadow duration-300 ease-in-out">
                                         <img src="{{ movie.image_url }}" alt="" width="100%">
                                     </div>
                                 </a>
@@ -127,7 +129,7 @@
                 <!-- Drama MOVIES START -->
                 <p class="text-4xl text-white font-semibold">Drama Movies</p>
                 <div class="w-full relative">
-                    <div class="flex overflow-x-scroll3 pb-10 hide-scroll-bar">
+                    <div class="flex overflow-x-scroll3 pb-10 hide-scroll-bar lg:ml-4 md:ml-4 ml-0">
                         <button
                             class="scroll-button left bg-mainColor bg-opacity-60 h-full flex items-center justify-center"
                             id="scrollLeft3">
@@ -139,11 +141,11 @@
                             <i class="text-white text-2xl fa-solid fa-chevron-right"></i>
                         </button>
                         {% for movie in data.movies_drama %}
-                        <div class="flex flex-nowrap lg:ml-10 md:ml-10 ml-0">
+                        <div class="flex flex-nowrap">
                             <div class="inline-block px-3">
                                 <a href="{{ url_for('movie_detail', moviename=movie.moviename) }}">
                                     <div
-                                        class="w-64 h-[370px] max-w-xs overflow-hidden rounded-lg shadow-md bg-white hover:shadow-xl transition-shadow duration-300 ease-in-out">
+                                        class="w-64 h-[370px] max-w-xs overflow-hidden rounded-lg shadow-md bg-black flex items-center hover:shadow-xl transition-shadow duration-300 ease-in-out">
                                         <img src="{{ movie.image_url }}" alt="" width="100%">
                                     </div>
                                 </a>
@@ -155,12 +157,7 @@
                 <!-- Drama MOVIES END -->
             </div>
 
-            <div class="h-[60vh] flex flex-col items-center justify-center">
-                <div class="text-semiWhite text-6xl font-bold flex gap-4">
-                    <p class="box" data-duration="3000">{{ data.moviecount }}</p>
-                    <p>Data</p>
-                </div>
-            </div>
+            
         </div>
     </main>
     <!-- CONTENT END -->
@@ -168,11 +165,7 @@
     <div class="text-semiWhite">
         {% include 'components/footer.html' %}
     </div>
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js"
-        integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous">
-        </script>
     <script src="../static/js/main.js"></script>
-    <script src="../static/js/dataCounter.js"></script>
 </body>
 
 </html>
