--- a/templates/detail-movie.html
+++ b/templates/detail-movie.html
@@ -28,7 +28,7 @@
         <div class="flex justify-between">
             <div class="flex flex-col gap-4">
                 <p class="text-5xl font-bold text-semiWhite">{{details.moviename}}</p>
-                <div class="text-sm font-light text-semiWhite flex gap-2">
+                <div class="text-lg font-light text-semiWhite flex gap-2">
                     <p>{{ details.year }}</p>
                     <span>&#x2022;</span>
                     <p>{{ details.category }}</p>
