--- a/templates/index.html
+++ b/templates/index.html
@@ -68,7 +68,7 @@
             </div>
           <form action="{{ url_for('process_form') }}" method="get">
             <input type="text" name="search" id="" autocomplete="off"
-            class="relative z-10 px-7 py-4 w-[80vw] sm:w-[500px] text-mainColor dark:text-[white] bg-white dark:bg-mainColor rounded-full leading-none flex items-center focus:dark:stroke-none font-medium placeholder-opacity-0 sm:placeholder-opacity-100 placeholder:dark:font-light transition duration-200 ease-in-out focus:outline-none" placeholder="Yaksha: Ruthless Operations">
+            class="relative z-10 px-7 py-4 w-[80vw] sm:w-[500px] text-mainColor dark:text-[white] bg-white dark:bg-mainColor rounded-full leading-none flex items-center focus:dark:stroke-none font-medium placeholder-opacity-0 sm:placeholder-opacity-100 placeholder:dark:font-light transition duration-200 ease-in-out focus:outline-none" placeholder="Find Your Movies Here...">
             </input>
             <button type="submit" class="absolute right-4 top-3 z-20">
               <svg xmlns="http://www.w3.org/2000/svg" class="dark:text-[#d1d5db]  icon icon-tabler icon-tabler-search" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
