--- a/templates/filter.html
+++ b/templates/filter.html
@@ -52,7 +52,7 @@
             <!-- CONTENT START -->
             <div class="flex flex-col pl-9 pr-4 gap-6">
                 <div class="flex justify-between w-full items-center">
-                    <p class="text-3xl font-semibold text-semiWhite relative -z-10">Showing result for "{{ desc }}"</p>
+                    <p class="text-3xl font-semibold text-semiWhite relative -z-10">Showing results for "{{ desc }}"</p>
                 </div>
                 <div class="flex w-[100%] flex-wrap gap-y-6 gap-x-4">
                     <!--  -->
